@@ -275,15 +275,16 @@ EOF
 
 (define (file-type file #!optional link (err #t))
   (and (stat file link err 'file-type)
-       (select (foreign-value "C_stat_type" unsigned-int)
-	 ((S_IFREG) 'regular-file)
-	 ((S_IFLNK) 'symbolic-link)
-	 ((S_IFDIR) 'directory)
-	 ((S_IFCHR) 'character-device)
-	 ((S_IFBLK) 'block-device)
-	 ((S_IFIFO) 'fifo)
-	 ((S_IFSOCK) 'socket)
-	 (else 'regular-file))))
+       (let ((res (foreign-value "C_stat_type" unsigned-int)))
+	 (cond
+	   ((fx= res S_IFREG) 'regular-file)
+	   ((fx= res S_IFLNK) 'symbolic-link)
+	   ((fx= res S_IFDIR) 'directory)
+	   ((fx= res S_IFCHR) 'character-device)
+	   ((fx= res S_IFBLK) 'block-device)
+	   ((fx= res S_IFIFO) 'fifo)
+	   ((fx= res S_IFSOCK) 'socket)
+	   (else 'regular-file)))))
 
 (define (regular-file? file)
   (eq? 'regular-file (file-type file #f #f)))
