@@ -64,6 +64,8 @@
   - Added the `glob->sre` procedure to the irregex library.
   - Removed the `get-host-name' and `system-information' procedures.
     These are available in the "system-information" egg.
+  - Removed the `eval-when`, `select` and `ensure` macros.  These are
+    available in the "miscmacros" egg.
   - Renamed bit-set? to bit->boolean because of swapped argument order
     with respect to SRFI-33 and SRFI-60, which was confusing (fixes
     #1385, thanks to Lemonboy).
